--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,6 @@
         "baseUrl": "./src"
     },
     "include": [
-        "src/**/*",
-        "src/components/pages/dashboard/.index.js"
+        "src/**/*"
     ]
 }
