--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.8.5",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.11.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "reqwest": "^2.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
